# AS-OCT

./: CMakeLists.txt  Dockerfile  LICENSE  Makefile  NEWsegmenter.py  README.md  _README.md  apt_train_addition.ipynb  apt_train_list.csv  boundingBoxOnRecovered.ipynb  convert_jpeg2NIfTI.py  create_segmentations.py  create_segmentations2.py  iteratorTest.py  main.py  main_sachi_ver.py  main_sachi_ver_fix.py  niftiConversion.ipynb  niftiNormalization.ipynb  see_feedback.txt  setup.cfg  setup.py  tempBounding.ipynb
diceTester/: dice_verification.ipynb
simplemind/: CONTRIBUTING.md  README.md  __init__.py  apt.py  assess.py  pyproject.toml  requirements.txt  sm.py
simplemind-applications/: create_list.py  create_list_split.py  report.html
simplemind-applications/fundus_quick_start/: fundus_apt_train.csv  optic_disk_cnn_train.csv
simplemind-applications/fundus_quick_start/fundus_quick_start/: quick_start_template.yml  run_in_docker_quick_start.sh
simplemind-applications/fundus_quick_start/fundus_quick_start/configurations/: create_list.py  create_list_split.py  fundus_cnn_resource.ini  optic_disk_apt_train.csv
simplemind-applications/oct_quick_start/: .gitignore  quick_start_template.yml
simplemind-applications/oct_quick_start/configurations/: conf_optimizer_ga.yml  cornea_apt_train.csv  cornea_cnn_train.csv  iris_apt_train.csv  iris_cnn_train.csv  oct_apt_train.csv
simplemind-applications/result_oct_v2/DEFAULT/SSA002_OD_Scan2_11/: eval_res.yml
simplemind-applications/result_oct_v2/DEFAULT/SSA002_OD_Scan2_9/: eval_res.yml
simplemind-applications/result_oct_v2/DEFAULT/SSA002_OS_Scan3_4/: eval_res.yml  sm_res.yml
simplemind-applications/result_oct_v2/DEFAULT/SSA002_OS_Scan3_8/: eval_res.yml
simplemind-applications/result_oct_v2/DEFAULT/SSA003_OD_Scan3_2/: eval_res.yml
simplemind-applications/result_oct_v2/DEFAULT/SSA003_OD_Scan3_9/: eval_res.yml  sm_res.yml
simplemind-applications/result_oct_v2/DEFAULT/SSA004_OD_Scan3_4/: eval_res.yml
simplemind-applications/result_oct_v2/DEFAULT/SSA004_OD_Scan3_8/: eval_res.yml
simplemind-applications/result_oct_v2/DEFAULT/SSA004_OS_Scan3_11/: sm_res.yml
simplemind-applications/result_oct_v2/DEFAULT/SSA004_OS_Scan4_1/: eval_res.yml
simplemind-applications/result_oct_v2/DEFAULT/SSA004_OS_Scan4_2/: sm_res.yml
simplemind-applications/result_oct_v2/DEFAULT/SSA004_OS_Scan4_3/: eval_res.yml
simplemind-applications/result_oct_v2/DEFAULT/SSA004_OS_Scan4_5/: eval_res.yml  sm_res.yml
simplemind-applications/result_oct_v2/DEFAULT/SSA004_OS_Scan4_9/: sm_res.yml
simplemind-applications/result_oct_v2/DEFAULT/SSA005_OD_Scan2_11/: eval_res.yml  sm_res.yml
simplemind-applications/result_oct_v2/DEFAULT/SSA005_OD_Scan2_7/: eval_res.yml
simplemind-applications/result_oct_v2/DEFAULT/SSA005_OD_Scan2_8/: eval_res.yml  sm_res.yml
simplemind-applications/result_oct_v2/DEFAULT/SSA005_OS_Scan2_5/: eval_res.yml
simplemind-applications/result_oct_v2/DEFAULT/SSA006_OD_Scan2_4/: eval_res.yml  sm_res.yml
simplemind-applications/result_oct_v2/DEFAULT/SSA006_OD_Scan2_6/: eval_res.yml  sm_res.yml
simplemind-applications/result_oct_v2/DEFAULT/SSA006_OS_Scan2_7/: eval_res.yml  sm_res.yml
simplemind-applications/result_oct_v2/DEFAULT/SSA006_OS_Scan2_9/: eval_res.yml
simplemind-applications/result_oct_v2/DEFAULT/SSA007_OD_Scan2_2/: eval_res.yml
simplemind-applications/result_oct_v2/DEFAULT/SSA007_OS_Scan2_10/: eval_res.yml  sm_res.yml
simplemind-applications/result_oct_v2/DEFAULT/SSA007_OS_Scan2_5/: sm_res.yml
simplemind-applications/template_quick_start/: README.md  quick_start_template.yml  run_quick_start.sh
simplemind-applications/template_quick_start/configurations/: template_apt_train_list.csv  template_cnn_train_list.csv
simplemind/docs/: Makefile  README.md
simplemind/docs/docker/: Dockerfile  README.md
simplemind/docs/source/: attributes.rst  authors.rst  conf.py  contributing.rst  developer.rst  examples.rst  index.rst  installation.rst  modules.rst  sm.rst  todo.rst  user.rst
simplemind/docs/source/_autosummary/: SM.rst
simplemind/docs/source/data/: train_list.csv
simplemind/requirements/: deep_med_requirements.txt  ds_requirements.txt  ga_requirements.txt  qia_requirements.txt
simplemind/simplemind/: __qia__.py
simplemind/simplemind/apt_agents/: __init__.py
simplemind/simplemind/dependencies/src/Img/common/qia/common/img/: AirwayMeasurement.h  CMakeLists.txt  common.pxd  element.h  element.pxd  element.pyx  filter.h  filter.pyx  image.h  image.pxd  image.pyx  lut.pxd  lut.pyx  measure.h  measure.pyx  overlay.h  overlay.pyx  statistics.pxd  statistics.pyx
simplemind/simplemind/dependencies/src/PCL/: CMakeLists.txt
simplemind/simplemind/goal/: semantic_network.py
simplemind/simplemind/tests/: __init__.py
simplemind/simplemind/tools/: __init__.py  quick_start.py
simplemind/src/pclMIU/: AnatPathEntity.cc  Attribute.h  Blackboard.cc  Blackboard.h  CMakeLists.txt  Contour.h  DICOMsequence.h  Exception.h  FPoint.cc  Feature.h  Image.h  ImageContour.cc  ImageContour.h  ImagePrimitive.cc  ImageRegion.cc  InfParam.cc  InfParam.h  InferencingKS.cc  Interval.cc  KStools.cc  KStools.h  KnowledgeSource.h  Line.cc  MemParam.cc  Model.cc  Model.h  ModelKS.cc  Plane.cc  Plane.h  Point.h  ROI.cc  ROIdescription.cc  ROItraverser.cc  ROItraverser.h  ROIworkspace.cc  ROIworkspace.h  SearchArea.cc  SearchArea.h  SegParam.cc  SegmentationKS.cc  (+8 more)
simplemind/tests/: conftest.py  test_sm_runner.py
simplemind/think/tools/: summary_blackboard.py
simplemind/tools/quick_start_template/: conf_distributor_condor.yml  conf_optimizer_ga.yml  task.yml
(+789 files in other folders)
